--- a/frontend/src/styles/Pagination.css
+++ b/frontend/src/styles/Pagination.css
@@ -8,8 +8,15 @@
 }
 
 .pagination span{
-    background-color: red;
+    color: white;
     width: 50px;
+    height: 40px;  
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    text-align: center;     
+    margin: 0 10px;
 }
 
 .pagination__btn {
@@ -20,7 +27,6 @@
     background-color: var(--black);
     color: var(--green);
     font-weight: bold;
-    margin-right: 20px;
     cursor: pointer;
 }
 
