--- a/frontend/src/styles/CardDetails.css
+++ b/frontend/src/styles/CardDetails.css
@@ -146,6 +146,8 @@
 
 .carddetails-quantity{
     height: 45px;
+    margin-bottom: 25px;
+    display: flex;
 }
 
 #quantitydown,
@@ -156,7 +158,6 @@
     width: 50px;
     height: 100%;
     cursor: pointer;
-    margin-bottom: 25px;
 }
 
 #quantitydown{
