--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,13 +63,13 @@ border: 1px solid var(--error);
     margin-bottom: 30px;
 }
 
-.login__input{
+.login-input{
     width: 100%;
     height: 55px;
     margin: 17px 0;
 }
 
-.login__input label {
+.login-input label {
     color: rgba(255, 51, 0, 0.76);
     font-size: 14px;
     display: block;
@@ -93,7 +93,7 @@ border: 1px solid var(--error);
     font-size: 16px;
 }
 
-#login__btn{
+#login-btn{
     margin-top: 12px;
     width: 100%;
     height: 65px;
@@ -104,7 +104,7 @@ border: 1px solid var(--error);
     outline: none;
 }
 
-#login__btn:hover {
+#login-btn:hover {
     cursor: pointer;
     background-color: var(--green-l);
 }
@@ -132,14 +132,14 @@ border: 1px solid var(--error);
 }
 
 
-#login__signup{
+#login-signup{
     font-size: 20px;
     display: flex;
     justify-content: center;
     margin: 20px 0;
 }
 
-#login__forget{
+#login-forget{
     font-size: 17px;
     margin-top: 30px;
     margin-bottom: 20px;
@@ -161,7 +161,7 @@ border: 1px solid var(--error);
     text-align: center;
 }
 
-.signup__input{
+.signup-input{
     width: 100%;
     height: 55px;
     margin: 25px 0;
@@ -183,7 +183,7 @@ border: 1px solid var(--error);
     font-size: 16px;
 }
 
-#signup__btn{
+#signup-btn{
     width: 100%;
     height: 65px;
     background-color: var(--green);
@@ -194,7 +194,7 @@ border: 1px solid var(--error);
     margin-top: 5px;
 }
 
-#signup__btn:hover{
+#signup-btn:hover{
     background-color: var(--green-l);
     cursor: pointer;
 }
@@ -221,14 +221,14 @@ border: 1px solid var(--error);
     width: 0;
 }
 
-#signup__login{
+#signup-login{
     font-size: 20px;
     display: flex;
     justify-content: center;
     margin: 20px 0;
 }
 
-.signup__input label {
+.signup-input label {
     color: rgba(255, 51, 0, 0.76);
     font-size: 14px;
     display: none;
@@ -259,7 +259,7 @@ border: 1px solid var(--error);
     margin: 0 10px;
 }
 
-.pagination__btn {
+.pagination-btn {
     width: 40px;
     height: 40px;
     border: solid 1px #303828;
@@ -270,23 +270,23 @@ border: 1px solid var(--error);
     cursor: pointer;
 }
 
-.pagination__btn i:nth-of-type(2){
+.pagination-btn i:nth-of-type(2){
     display: none;
 }
 
-.pagination__btn:nth-of-type(1):hover #left__angle{
+.pagination-btn:nth-of-type(1):hover #left-angle{
     display: none;
 }
 
-.pagination__btn:nth-of-type(1):hover #left__arrow{
+.pagination-btn:nth-of-type(1):hover #left-arrow{
     display: inline;
 }
 
-.pagination__btn:nth-of-type(2):hover #right__angle{
+.pagination-btn:nth-of-type(2):hover #right-angle{
     display: none;
 }
 
-.pagination__btn:nth-of-type(2):hover #right__arrow{
+.pagination-btn:nth-of-type(2):hover #right-arrow{
     display: inline;
 }
 
@@ -313,7 +313,7 @@ border: 1px solid var(--error);
     margin: 0;
 }
 
-.slider__list{
+.slider-list{
     position: absolute;
     top: 0;
     left: 0;
@@ -323,13 +323,13 @@ border: 1px solid var(--error);
     transition: 1s;
 }
 
-.slider__list img{
+.slider-list img{
     width: 1519px;
     height: 100%;
     object-fit: fill;
 }
 
-.slider__button{
+.slider-button{
     position: absolute;
     top: 42%;
     left: 5%;
@@ -338,7 +338,7 @@ border: 1px solid var(--error);
     justify-content: space-between;
 }
 
-.slider__button button{
+.slider-button button{
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -348,7 +348,7 @@ border: 1px solid var(--error);
     font-weight: bold;
 }
 
-.slider__dots{
+.slider-dots{
     position: absolute;
     left: 82%;
     bottom: 15%;
@@ -359,7 +359,7 @@ border: 1px solid var(--error);
     display: flex;
 }
 
-.slider__dots li{
+.slider-dots li{
     list-style: none;
     width: 10px;
     height: 10px;
@@ -369,7 +369,7 @@ border: 1px solid var(--error);
     transition: 1s;
 }
 
-.slider__dots li.active{
+.slider-dots li.active{
     background-color: #fff;
     width: 29px;
 }
