--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -10,7 +10,7 @@ footer{
     line-height: 20px;
 }
 
-.footer__container{
+.footer-container{
     width: 95%;
     display: flex;
     flex-wrap: wrap;
@@ -21,16 +21,16 @@ footer{
     margin: 0 auto;
 }
 
-.footer__content{
+.footer-content{
     flex-basis: 25%;
     padding: 10px;
 }
 
-.footer__content:nth-child(2), .footer__content:nth-child(3){
+.footer-content:nth-child(2), .footer-content:nth-child(3){
     flex-basis: 15%;
 }
 
-.footer__container img{
+.footer-container img{
     width: 85px;
     height: 70px;
     object-fit: cover;
@@ -38,19 +38,19 @@ footer{
     margin-bottom: 30px;
 }
 
-.footer__content h3{
+.footer-content h3{
     width: fit-content;
     margin-bottom: 40px;
     position: relative;
 }
 
-.footer__email--id{
+.footer-email--id{
     width: fit-content;
     border-bottom: solid 1px #ccc;
     margin: 20px 0;
 }
 
-.footer__form{
+.footer-form{
     padding-bottom: 15px;
     display: flex;
     align-items: center;
@@ -59,7 +59,7 @@ footer{
     margin-bottom: 50px;
 }
 
-.footer__form button{
+.footer-form button{
     width: 25px;
     height: 22px;
     border-radius: 50%;
@@ -69,18 +69,18 @@ footer{
     font-weight: bold;
 }
 
-.footer__form button:hover{
+.footer-form button:hover{
     cursor: pointer;
     color: black;
     background-color: #fff;
 }
 
-.footer__form i{
+.footer-form i{
     font-size: 18px;
     margin-right: 10px;
 }
 
-.footer__form input{
+.footer-form input{
     width: 100%;
     background: transparent;
     border: none;
@@ -88,7 +88,7 @@ footer{
     color: #ccc;
 }
 
-.footer__social--icons i{
+.footer-social--icons i{
     width: 40px;
     height: 40px;
     text-align: center;
@@ -98,7 +98,7 @@ footer{
     transition: 0.3s;
 }
 
-.footer__social--icons i:hover{
+.footer-social--icons i:hover{
     cursor: pointer;
     transform: translateY(-5px);
 }
@@ -114,7 +114,7 @@ hr{
     margin: auto;
 }
 
-.footer__underline{
+.footer-underline{
     width: 100%;
     height: 5px;
     background:  #767676;
@@ -125,7 +125,7 @@ hr{
     overflow: hidden;
 }
 
-.footer__underline span{
+.footer-underline span{
     width: 15px;
     height: 100%;
     background: white;
@@ -148,12 +148,12 @@ hr{
 /* footer responsive */
 
 @media screen  and (min-width: 827px) and (max-width: 1070px){
-    .footer__form i{
+    .footer-form i{
         font-size: 16px;
         margin-right: 10px;
     }
 
-    .footer__social--icons i{
+    .footer-social--icons i{
         width: 40px;
         height: 40px;
         text-align: center;
@@ -169,11 +169,11 @@ hr{
         bottom: unset;
     }
 
-    .footer__content{
+    .footer-content{
         flex-basis: 100%;
     }
 
-    .footer__content:nth-child(2), .footer__content:nth-child(3){
+    .footer-content:nth-child(2), .footer-content:nth-child(3){
         flex-basis: 100%;
     }
 }
