--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -53,3 +53,182 @@
     cursor: pointer;
     background-color: rgba(8, 220, 100, 0.8);
 }
+
+/* Card Details */
+
+.product-page{
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: none;
+}
+
+.product{
+    position: relative;
+    width: 1000px;
+    height: 600px;
+    margin: 40px auto;
+    background-color: rgba(32, 28, 28, 0.93);
+    display: flex;
+    animation: topDown 0.55s ease;
+}
+
+@keyframes topDown{
+    from{
+        transform: translateY(-700px);
+    }
+    to{
+        transform: translateY(0px);
+    }
+}
+
+@keyframes bottomUp{
+    from{
+        transform: translateY(0px);
+    }
+    to{
+        transform: translateY(-700px);
+    }
+}
+
+#product-close{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 1.2em;
+    transition: transform 0.3s;
+    color: white;
+}
+
+#product-close:hover{
+    cursor: pointer;
+    transform: translateY(-5px);
+}
+
+.product *{
+    color: white;
+}
+
+.product h1{
+    font-size: 1.5em;
+    margin-top: 3px;
+}
+
+.product-img{
+    width: 45%;
+    margin-top: 12px;
+}
+
+.product-info{
+    margin-top: 15px;
+    margin-left: 30px;
+    width: 55%;
+}
+
+.product-img{
+    position: relative;
+}
+
+.product-img img{
+    width: 100%;
+    height: 77%;
+    margin: 0;
+    margin-top: 12.2px;
+    transition: 0.32s ease-in-out;
+}
+
+.product-img img:nth-of-type(1){
+    position: absolute;
+}
+
+.product-img a:nth-of-type(1) img{
+    width: 27%;
+    height: 17%;
+    position: absolute;
+    bottom: 12px;
+    left: 0;
+}
+
+.product-img a:nth-of-type(2) img{
+    width: 27%;
+    height: 17%;
+    position: absolute;
+    bottom: 12px;
+    left: 135px;
+}
+
+.product-img a:hover{
+    cursor: pointer;
+}
+
+.product-info h1{
+    margin-bottom: 10px;
+    width: 70%;
+}
+
+.product-info h2{
+    margin-bottom: 10px;
+}
+
+.product-info button:hover{
+    cursor: pointer;
+}
+
+.product-info--rating i{
+    color: gold;
+    margin-bottom: 10px;
+}
+
+.product-info--rating :nth-child(5)
+{
+    color: white;
+}
+
+.product-info p:nth-of-type(1){
+    font-size: 1.07em;
+    margin-bottom: 10px;
+}
+
+.product-info p:nth-of-type(2){
+    color: var(--gray);
+    margin-bottom: 10px;
+}
+
+.product-info p:nth-of-type(3){
+    font-weight: bold;
+}
+
+.product-info p:nth-of-type(4){
+    font-size: 1.05em;
+}
+
+.product-info p:nth-of-type(5){
+    margin-bottom: 110px;
+}
+
+.product-info p:nth-of-type(6){
+    font-size: 0.95em;
+}
+
+.product-info p:nth-of-type(7){
+    font-size: 0.95em;
+}
+
+.product-info button{
+    background-color: var(--green);
+    border: none;
+    color: black;
+    height: 55px;
+    width: 320px;
+    font-weight: bold;
+    font-size: 1.1em;
+    margin-bottom: 20px;
+}
+
+.product-info button:hover{
+    background-color: var(--green-l);
+}
