--- a/frontend/src/styles/UserInfo.css
+++ b/frontend/src/styles/UserInfo.css
@@ -34,7 +34,7 @@
     cursor: pointer;
 }
 
-#order-container{
+#order-history-container{
     position: relative;
     top: 150px;
     /* border: 1px solid white; */
@@ -42,12 +42,110 @@
     margin: 0 auto 220px;
 }
 
+#order-history-container h2{
+    color: #ddd;
+    margin: 20px 0;
+    text-align: center;
+}
+
 .order-history{
     margin: 0 auto;
     padding: 20px;
 }
 
-.order{
+.order-history-info{
+    display: grid;
+    grid-template-columns: 2fr 3fr 3fr 2.5fr 2.5fr;
+    padding: 25px 0;
+    text-align: center;
+    align-items: center;
+    color: white;
+    border-bottom: 1px solid hsl(0, 0%, 50%, 0.3);
+    
+}
+
+.order-history-status-pending{
+    color: rgb(230, 158, 25);
+    font-weight: bold;
+
+}
+
+.order-history-status-delivered{
+    color: #28ac64;
+
+}
+
+.user-history-status-canceled{
+    color: #f84c2c;
+
+}
+
+.show-history-details{
+    cursor: pointer;
+}
+
+.order-history-info button{
+    display: block;
+    height: 35px;
+    width: 130px;
+    margin-top: 5px;
+    padding: 5px;
+    background-color: var(--green);
+    color: black;
+    font-size: 15px;
+    border-radius: 7px;
+    border: none;
+    cursor: pointer;
+}
+
+.order-history-info button:hover{
+    background-color: var(--green-l);
+}
+
+.order-history-details-container{
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.order-history-details{
+    position: relative;
+    background-color: var(--black);
+    width: 90%;
+    max-width: 450px;
+    min-height: 300px;
+    max-height: 80vh;
+    margin: 90px auto;
+    padding: 20px 20px 10px;
+    color: white;
+    bottom: unset;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.4);
+    overflow-y: auto; /* Enables scrolling when needed */
+}
+
+.order-history-details i{
+    position: absolute;
+    right: 3%;
+    top: 3%;
+    color: rgba(255, 255, 255, 0.752);
+
+    cursor: pointer;
+}
+
+.order-history-details img{
+    width: 50px;
+}
+
+.order-history-details div{
+    margin: 20px 0;
+}
+
+/* .order{
     display: flex;
     margin: 0 auto;
 }
@@ -139,7 +237,7 @@
 
 .order-items-details{
     color: #ddd;
-}
+} */
 
 #user-container{
     max-width: 600px;
