--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -453,3 +453,151 @@ input[type="file"] {
 #admin-login a:hover::after{
     width: 0;
 }
+
+
+
+
+
+.tool{
+    display: flex;
+}
+.tool .search-order{
+    background-color: var(--black);
+    border-radius: 5px;
+    border: 1px solid var(--gray);
+    height: 40px;
+    cursor: pointer;
+    color: white;
+    margin-right: 25px;
+    width: 70%;
+    padding: 0px 10px;
+
+
+}
+.tool input,
+.modal input{
+    background: transparent;
+    border: none;
+    padding: 10px 0 10px;
+    font-size: 15px;
+    color: white;
+    margin: 0px 10px;
+}
+.tool input{
+    width: 80%;
+}
+.modal input{
+    width: 100%;
+    border: solid 1px #363636;
+    margin: 10px;
+    padding: 10px;
+}
+.tool input:focus,
+.modal input:focus{
+    outline: none;
+
+}
+.tool label{
+    color: white;
+    margin: 10px;
+}
+.tool .date{
+    background-color: var(--black);
+    border-radius: 5px;
+    border: 1px solid var(--gray);
+    height: 40px;
+    cursor: pointer;
+    color: white;
+    width: 80%;
+    padding: 0px 10px;
+}
+.tool >i{
+    background-color: var(--black);
+    border-radius: 5px;
+    border: 1px solid var(--gray);
+    height: 40px;
+    cursor: pointer;
+    color: white;
+    padding:  10px;
+}
+table{
+    background-color: var(--black);
+    border-radius: 5px;
+    border: 1px solid var(--gray);
+    height: 40px;
+    cursor: pointer;
+    color: white;
+    width: 100%;
+    padding: 0px 10px;
+    margin: 20px;
+}
+
+.add-user-container{
+    position: fixed; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1;
+}
+
+.add-user{
+    position: absolute;
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    padding: 20px;
+    background-color: var(--black);
+    width: 90%;
+    max-width: 520px;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.4);
+}
+
+.add-user i{
+    position: absolute;
+    top: 3%;
+    right: 3%;
+    cursor: pointer;
+}
+
+.add-user label{
+    color: white;
+    font-weight: bold;
+}
+
+.add-user input{
+    background: transparent;
+    padding: 10px;
+    font-size: 16px;
+    color: white;
+    width: 100%;
+    border: solid 1px #363636;
+    outline: none;
+    margin: 10px 0 10px;
+    border-radius: 5px;
+}
+
+.add-user button{
+    padding: 7px 7px 7px 5px;
+    background-color: var(--green);
+    color: black;
+    border: none;
+    font-size: 20px;
+    width: 100px;
+    cursor: pointer;
+    margin-top: 20px;
+    margin: auto;
+    border-radius: 5px;
+}
+
+.add-user button:hover {
+    background-color: var(--green-l);
+}
+
+.add-user h2 {
+    text-align: center;
+    margin-bottom: 25px;
+}
